[package]
name = "joy_publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dualshock-driver = {git = "https://github.com/motii8128/dualshock-driver"}
prr_msgs = {git = "https://github.com/PureRustRobot/prr_msgs"}
prr_utils = {git = "https://github.com/PureRustRobot/prr_utils"}
zenoh = "0.7.0-rc"
async-std = "1.0"
